@@ -1,3 +1,11 @@
+Mon Sep 20 13:53:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Session/Servant_Impl_T.h:
+        * ciao/Servants/Session/Servant_Impl_T.cpp:
+        * ciao/Servants/Servant_Impl_T.h:
+        * ciao/Servants/Servant_Impl_T.cpp:
+          Moved to Session directory and removed EntityContext code
+
 Mon Sep 20 13:38:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Contexts/Session/Context_Impl_T.h:
